objects/ASI_Attachment_Notification_Log__c.object
<CustomObject>
    <fields>
        <fullName>ASI_Attachment_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_Attachment_Email_From__c</fullName>
        <label>Email From</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_Attachment_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Attachment_Tag_Name__c</fullName>
        <label>Tag Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Attachment_Tag_Value__c</fullName>
        <label>Tag Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ASI Attachment Notification Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_Attachment_Description__c</columns>
        <columns>ASI_Attachment_Email_From__c</columns>
        <columns>ASI_Attachment_External_ID__c</columns>
        <columns>ASI_Attachment_Tag_Name__c</columns>
        <columns>ASI_Attachment_Tag_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI Attachment Notification Logs</pluralLabel>
    <recordTypes>
        <fullName>ASI_Attachment_CN_Notification_Log</fullName>
        <active>true</active>
        <label>ASI Attachment CN Notification Log</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>